--- a/preamble.tex
+++ b/preamble.tex
@@ -1,3 +1,10 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian,english]{babel}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{mathtools}
+\usepackage{xcolor}
+
+\binoppenalty=10000 
+\relpenalty=10000 
