--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -1,6 +1,20 @@
 \documentclass[a4paper,12pt]{report}
 \input{preamble.tex}
 
+%Work in progress
+\newcommand{\todo}[1]{\PackageWarning{todo}{Todo: #1}}
+
+\usepackage{silence}
+\WarningFilter[todo]{todo}
+  {Todo }
+\WarningFilter[ref]{latex}
+  {Reference }
+\WarningFilter[ref]{latex}
+  {There were undefined references }
+
+\ActivateWarningFilters[ref]
+\ActivateWarningFilters[todo]
+
 \begin{document}
 \input{chapters/probability.tex}
 \input{chapters/quantum.tex}
