--- a/preamble.tex
+++ b/preamble.tex
@@ -2,9 +2,17 @@
 \usepackage[utf8]{inputenc}
 \usepackage[italian,english]{babel}
 \usepackage{amsmath}
+\usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{mathtools}
 \usepackage{xcolor}
+\usepackage{cleveref}
+\usepackage{etoolbox}
+
+\theoremstyle{plain}
+\newtheorem{theorem}{Theorem}
+%\AtBeginEnvironment{theorem}{\begin{minipage}{\textwidth}}
+%\AtEndEnvironment{theorem}{\end{minipage}}
 
 \binoppenalty=10000 
 \relpenalty=10000 
