Coin toss asymmetry

--- a/preamble.tex
+++ b/preamble.tex
@@ -5,14 +5,11 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{mathtools}
-\usepackage{xcolor}
 \usepackage{cleveref}
-\usepackage{etoolbox}
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
-%\AtBeginEnvironment{theorem}{\begin{minipage}{\textwidth}}
-%\AtEndEnvironment{theorem}{\end{minipage}}
+\newtheorem*{example}{Example}
 
 \binoppenalty=10000 
 \relpenalty=10000 
