Fisher information metric

--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -16,6 +16,7 @@
 \ActivateWarningFilters[todo]
 
 \begin{document}
+\tableofcontents
 \input{chapters/probability.tex}
 %\input{chapters/quantum.tex}
 \end{document}
