--- a/sections/probability/metric.tex
+++ b/sections/probability/metric.tex
@@ -153,7 +153,7 @@ for a fixed $p$ and $\partial_i=\frac{\partial}{\partial\theta^i}$. So we have
 and equivalently
 \begin{align}
     g_{ij}^{(S)}=\mathrm{E}_p\left[\frac{1}{p^2(x)}\partial_ip(x;\theta)\partial_jp(x;\theta)\right] &=\mathrm{E}_p[\partial_i\ln p(x;\theta) \partial_j\ln p(x;\theta)]\\
-    &=\sum_{x\in\mathcal{X}}\frac{\partial_ip(x;\theta)\partial_jp(x;\theta)}{p(x)}
+    &=\sum_{x\in\mathcal{X}}\frac{\partial_ip(x;\theta)\partial_jp(x;\theta)}{p(x)} \label{eq:fisher-mix}
 \end{align}
 where we used the fact that
 \begin{equation}
