--- a/preamble.tex
+++ b/preamble.tex
@@ -12,8 +12,8 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem*{example}{Example}
 
-\binoppenalty=10000 
-\relpenalty=10000 
+%\binoppenalty=10000 
+%\relpenalty=10000 
 
 %Work in progress
 \newcommand{\todo}[1]{\PackageWarning{todo}{Todo: #1}}
