--- a/sections/probability/manifold.tex
+++ b/sections/probability/manifold.tex
@@ -41,7 +41,7 @@ From our definitions, it is clear that the maximal dimension of a model is $n=N-
 that we call the \emph{manifold of probability distributions}. Notice that $\mathcal{P}$ is the interior of the space of probability distributions, this is because from our definitions follows that every $(N-1)$-dimensional statistical manifold must be an open subset of $\mathcal{A}_1$.
 \todo{Esempi}
 
-\section{The tangent space and its representations}
+\section{The tangent space and its representations} \label{ch:tgt-space}
 %Define m-representation of Tp through the displacement vector space of A1: A0
 %Explain the natural isomorphism and state sum dip = 0 and dip l.i.
 %Define the e-representation of Tp through the orthogonal space of the points
