--- a/sections/probability/metric.tex
+++ b/sections/probability/metric.tex
@@ -142,7 +142,7 @@ We now go back to the relative entropy, we report the definition given in \cref{
 \begin{equation*}
     S(p\parallel q)\coloneqq\sum_{x\in\mathcal{X}}p(x)\ln\left(\frac{p(x)}{q(x)}\right)
 \end{equation*}
-this is a $C^2$ function of $\mathcal{P}\times\mathcal{P}$ and it follows \cref{eq:div-def}. So for any model $S$ with parameters $\{\theta^{(i)}\}$ we can define
+this is a $C^2$ function of $\mathcal{P}\times\mathcal{P}$ and it follows \cref{eq:div-def}. So for any model $\mathcal{S}$ with parameters $\{\theta^{(i)}\}$ we can define
 \begin{equation}
     g_{ij}^{(S)}=S[\,\cdot\parallel\partial_i\partial_j\,]=\left.\partial_i\partial_j\sum_{x\in\mathcal{X}}p(x)\ln\left(\frac{p(x)}{q(x;\theta)}\right)\right\rvert_{q=p}
 \end{equation}
@@ -152,14 +152,43 @@ for a fixed $p$ and $\partial_i=\frac{\partial}{\partial\theta^i}$. So we have
 \end{equation}
 and equivalently
 \begin{align}
-    g_{ij}^{(S)}=\mathrm{E}_p\left[\frac{1}{p^2(x)}\partial_ip(x;\theta)\partial_jp(x;\theta)\right] &=\mathrm{E}_p[\partial_i\ln p(x;\theta) \partial_j\ln p(x;\theta)]\\
+    g_{ij}^{(S)}=\mathrm{E}_p\left[\frac{1}{p^2(x)}\partial_ip(x;\theta)\partial_jp(x;\theta)\right] &=\mathrm{E}_p[\partial_i\ln p(x;\theta) \partial_j\ln p(x;\theta)]\label{eq:fisher-exp} \\
     &=\sum_{x\in\mathcal{X}}\frac{\partial_ip(x;\theta)\partial_jp(x;\theta)}{p(x)} \label{eq:fisher-mix}
 \end{align}
 where we used the fact that
 \begin{equation}
     \sum_{x\in\mathcal{X}}\partial_i\partial_jp(x;\theta)=\partial_i\partial_j\sum_{x\in\mathcal{X}}p(x;\theta)=0
 \end{equation}
-Since we know that any $g_{ij}^{(D)}$ is positive semi-definite, $g_{ij}^{(S)}$ will be positive definite if and only if it is invertible. It can be easily shown that if the functions $\partial_ip(x;\theta)$ are linearly independent, then $g_{ij}^{(S)}$ is invertible and thus positive definite. Since the parameters $\{\theta^{(i)}\}$ act as coordinates for the manifold the functions $\partial_ip(x;\theta)$ must be linearly indipendent. Thus, relative entropy is a divergence and in fact, it is also known as \emph{Kullback-Leibler divergence} or \emph{information divergence}.
+Since we know that any $g_{ij}^{(D)}$ is positive semi-definite, $g_{ij}^{(S)}$ will be positive definite if and only if it is invertible. It can be easily shown that if the functions $\partial_ip(x;\theta)$ are linearly independent, then $g_{ij}^{(S)}$ is invertible and thus positive definite. Thus, relative entropy is a divergence and in fact, it is also known as \emph{Kullback-Leibler divergence} or \emph{information divergence}.
 \todo{proof positive-definite?}
 
-Finally, then, $g_{ij}^{(S)}$ defines a metric tensor and it is known as the \emph{Fisher information metric}. As we have seen this is, up to a constant factor, the unique metric induced by the relative entropy, and it will be of focal importance for the geometrical modeling and interpretation of statistics.
+Finally, then, $g_{ij}^{(S)}$ defines a metric tensor and it is known as the \emph{Fisher information metric}. This is, up to a constant factor, the unique metric induced by the relative entropy, and it plays a focal role for the geometrical modeling and interpretation of statistics.
+
+\section{The geometry of $\mathcal{P}$}
+The Fisher metric defines the inner product $\langle\,\cdot\,,\,\cdot\,\rangle_p$ between tangent vectors of a point $p\in\mathcal{P}$. Let us now express this inner product through the representations we defined in \cref{ch:tgt-space}. Given two tangent vectors $X,Y\in T_p\mathcal{P}$ from \cref{eq:fisher-exp} we find that
+\begin{equation}
+    \langle X,Y \rangle_p=\mathrm{E}_p[X^{(e)}Y^{(e)}]
+\end{equation} 
+while from \cref{eq:fisher-mix} we get
+\begin{align}
+    \langle X,Y \rangle_p &=\sum_{x\in\mathcal{X}}\frac{X^{(m)}(x)Y^{(m)}(x)}{p(x)}\\
+    &=\sum_{x\in\mathcal{X}}{X^{(m)}(x)Y^{(e)}(x)}=\sum_{x\in\mathcal{X}}{X^{(e)}(x)Y^{(m)}(x)}
+\end{align}
+These expressions will prove to be very useful in \ref{}.
+
+We notice that in neither representations the inner product is the Euclidean one induced by $\mathbb{R}^\mathcal{X}$ on the respective embeddings. For such a representation we would have that
+\begin{equation} \label{eq:fisher-0-rep}
+    \langle X,Y \rangle_p=\sum_{x\in\mathcal{X}}{X^{(0)}(x)Y^{(0)}(x)}
+\end{equation}
+then it's easy to guess that the embedding
+\begin{equation}
+    p\mapsto 2\,\sqrt{p} \eqqcolon p_{(0)}
+\end{equation}
+is the one whose representation of the tangent spaces 
+\begin{equation}
+    X^{(0)}\coloneqq X(2\,\sqrt{p})=\frac{X(p)}{\sqrt{p}},\qquad X\in T_p(\mathcal{P})
+\end{equation}
+follows \cref{eq:fisher-0-rep}. This means that the information geometry of $\mathcal{P}$, i.e. the geometry iduced on it by the Fisher metric, is that of an $N$-dimensional round sphere since
+\begin{equation}
+    \sum_{x\in\mathcal{X}}p(x)=1 \implies \sum_{x\in\mathcal{X}}p_{(0)}^2(x)=4
+\end{equation}
