--- a/quantum-estimation.tex
+++ b/quantum-estimation.tex
@@ -1,4 +1,6 @@
 \documentclass[a4paper,12pt]{report}
+%\documentclass[a4paper]{report}
+%\documentclass[a4paper,12pt]{report}
 \input{preamble.tex}
 
 \begin{document}
